cluster/worker/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meteor-worker
spec:
  type: ExternalName
  externalName: meteor.worker.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker-gateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - worker.uws.talkingpts.org
      secretName: worker-certificate
  rules:
    - host: worker.uws.talkingpts.org
      http:
        paths:
          # /bandwidthCallbackSMS
          - pathType: Prefix
            path: /(bandwidthCallbackSMS)$
            backend:
              service:
                name: meteor-worker
                port:
                  number: 3000
          # /coconut_webhook
          - pathType: Prefix
            path: /(coconut_webhook)$
            backend:
              service:
                name: meteor-worker
                port:
                  number: 3000
          # /twilio/smsSendCallback
          - pathType: Prefix
            path: /(twilio/smsSendCallback)$
            backend:
              service:
                name: meteor-worker
                port:
                  number: 3000
